# web3games-blockchain

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  HEADER-GPL3  LICENSE  README.md  docker-compose.yml  metadataType.json  rust-toolchain  sc.json  sc_init.json
.github/workflows/: editorconfig.yml  rust.yml
.maintain/: w3g-weight-template.hbs
chain-extensions/: Cargo.toml  README.md
chain-extensions/src/: lib.rs  token_fungible.rs  token_multi.rs  token_non_fungible.rs
client/: README.md
docker/: README.md
node/: Cargo.toml  README.md  build.rs
node/src/: chain_spec.rs  cli.rs  command.rs  command_helper.rs  lib.rs  main.rs  rpc.rs  service.rs
pallets/: README.md
pallets/call-switchgear/: Cargo.toml
pallets/call-switchgear/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/chain-extension/: Cargo.toml
pallets/chain-extension/src/: lib.rs
pallets/currency-token/: Cargo.toml
pallets/currency-token/src/: lib.rs  mock.rs
pallets/dex/: Cargo.toml
pallets/dex/src/: lib.rs  mock.rs  tests.rs
pallets/erc1155/: Cargo.toml
pallets/erc1155/src/: lib.rs  mock.rs  tests.rs
pallets/ethereum-chain-id/: Cargo.toml
pallets/ethereum-chain-id/src/: lib.rs
pallets/evm-chain-id/: Cargo.toml
pallets/evm-chain-id/src/: lib.rs
pallets/evm-precompile/: Cargo.toml
pallets/evm-precompile/src/: erc1155.rs  lib.rs  tokens.rs
pallets/exchange/: Cargo.toml  README.md
pallets/exchange-nft/: Cargo.toml
pallets/exchange-nft/src/: lib.rs  mock.rs  tests.rs
pallets/exchange/nft-pool/: Cargo.toml
pallets/exchange/nft-pool/src/: lib.rs  mock.rs
pallets/exchange/pool/: Cargo.toml
pallets/exchange/pool/src/: lib.rs
pallets/exchange/rpc/: Cargo.toml
pallets/exchange/rpc/runtime-api/: Cargo.toml
pallets/exchange/rpc/runtime-api/src/: lib.rs
pallets/exchange/rpc/src/: lib.rs
pallets/exchange/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/farming/: Cargo.toml
pallets/farming/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/launchpad/: Cargo.toml
pallets/launchpad/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/marketplace/: Cargo.toml
pallets/marketplace/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/nft/: Cargo.toml
pallets/nft-market/: Cargo.toml
pallets/nft-market/src/: lib.rs
pallets/nft/src/: lib.rs  mock.rs
pallets/offchain-worker/: Cargo.toml
pallets/offchain-worker/src/: lib.rs  tests.rs
pallets/player-id/: Cargo.toml
pallets/player-id/src/: benchmarking.rs  ethereum.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/poe/: Cargo.toml
pallets/poe/src/: lib.rs  mock.rs  tests.rs
pallets/proxy-pay/: Cargo.toml  README.md
pallets/proxy-pay/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/support/: Cargo.toml
pallets/support/src/: lib.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs  mock.rs  tests.rs
pallets/token/: Cargo.toml
pallets/token-fungible/: Cargo.toml  README.md
pallets/token-fungible/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/token-multi/: Cargo.toml  README.md
pallets/token-multi/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/token-non-fungible/: Cargo.toml  README.md
pallets/token-non-fungible/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/token/fungible/: Cargo.toml
pallets/token/fungible/src/: lib.rs
pallets/token/multi/: Cargo.toml
pallets/token/multi/src/: lib.rs
pallets/token/non-fungible/: Cargo.toml
pallets/token/non-fungible/src/: lib.rs  mock.rs
pallets/token/src/: lib.rs  mock.rs  tests.rs
pallets/tokens/: Cargo.toml
pallets/tokens/src/: lib.rs  mock.rs  tests.rs
pallets/transaction-storage/: Cargo.toml
pallets/transaction-storage/src/: lib.rs  weights.rs
pallets/wrap-currency/: Cargo.toml
pallets/wrap-currency/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
precompiles/: Cargo.toml  README.md
precompiles/src/: Exchange.sol  Farming.sol  Launchpad.sol  Marketplace.sol  TokenFungible.sol  exchange.rs  farming.rs  launchpad.rs  lib.rs  marketplace.rs  token_fungible.rs  token_multi.rs  token_non_fungible.rs
precompiles/utils/: Cargo.toml
precompiles/utils/macro/: Cargo.toml
precompiles/utils/macro/src/: lib.rs
precompiles/utils/macro/tests/: tests.rs
precompiles/utils/src/: costs.rs  handle.rs  lib.rs  logs.rs  modifier.rs  precompile_set.rs  substrate.rs  testing.rs  tests.rs
precompiles/utils/src/data/: mod.rs  xcm.rs
primitives/: Cargo.toml  README.md
primitives/src/: lib.rs
runtime/: Cargo.toml  README.md
runtime/chain-extension/: Cargo.toml
runtime/chain-extension/src/: lib.rs
runtime/common/: Cargo.toml
runtime/common/chain-extensions/: Cargo.toml
runtime/common/chain-extensions/src/: lib.rs  token.rs  token_fungible.rs  token_multi.rs  token_non_fungible.rs  tokens.rs
runtime/common/precompiles/: Cargo.toml
runtime/common/precompiles/src/: lib.rs  token.rs  token_fungible.rs  token_multi.rs  token_non_fungible.rs  tokens.rs
runtime/common/precompiles/utils/: Cargo.toml
runtime/common/precompiles/utils/macro/: Cargo.toml
runtime/common/precompiles/utils/macro/src/: lib.rs
runtime/common/precompiles/utils/macro/tests/: tests.rs
runtime/common/precompiles/utils/src/: data.rs  lib.rs  tests.rs
runtime/common/src/: lib.rs
runtime/extensions/ce/: Cargo.toml
runtime/extensions/ce/src/: lib.rs
runtime/precompile/: Cargo.toml
runtime/precompile/src/: erc1155.rs  lib.rs
runtime/precompiles/: Cargo.toml
runtime/precompiles/src/: lib.rs  tokens.rs
runtime/src/: constants.rs  lib.rs
runtime/web3games/: Cargo.toml  build.rs
runtime/web3games/src/: constants.rs  lib.rs
scripts/: README.md  generate-weights.sh  init.sh
specs/: README.md  develop_setting.json
specs/devnet/: devnet.json
specs/testnet/: testnet.json
