[workspace]
members = [
	"pallets/token-fungible",
	"pallets/token-multi",
	"pallets/token-non-fungible",
	"primitives",
	"runtime/common",
	"runtime/common/chain-extensions",
	"runtime/common/precompiles",
	"runtime/web3games",
	"node",
]

[profile.release]
panic = "unwind"

[patch.crates-io]
syn = { git = "https://github.com/dtolnay/syn", rev = "19b3f0b53525ac7ab0882882a822adbd874dbe8c" }