[workspace]
members = [
	"pallets/token-fungible",
	"pallets/token-multi",
	"pallets/token-non-fungible",
	"primitives",
	"chain-extensions",
	"precompiles",
	"runtime/web3games",
	"node",
]

[profile.release]
panic = "unwind"

[patch.crates-io]
syn = { git = "https://github.com/dtolnay/syn", rev = "60ecbac3767338ca070cddd539e4c403241e9f6a" }
