[package]
name = "chain-extensions"
version = "0.1.0"
authors = ["Web3Games Developers"]
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "max-encoded-len"] }
serde = { version = "1.0.137", features = ["derive"], optional = true }
hex = { version = "0.4.2", optional = true }
log = { version = "0.4.17", default-features = false }

sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" , default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" , default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" , default-features = false }
randomness = { package = "pallet-randomness-collective-flip", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" , default-features = false }
pallet-contracts = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" , default-features = false }

primitives = {path = "../primitives", default-features = false }

pallet-token-fungible = { path = "../pallets/token-fungible", default-features = false }
pallet-token-non-fungible = { path = "../pallets/token-non-fungible", default-features = false }
pallet-token-multi = { path = "../pallets/token-multi" ,default-features = false}

[features]
default = ["std"]
std = [
	"codec/std",
	"serde/std",
	"log/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-support/std",
	"randomness/std",
	"pallet-contracts/std",
	"primitives/std",
	"pallet-token-fungible/std",
	"pallet-token-non-fungible/std",
	"pallet-token-multi/std"
]
