[package]
name = "web3games-node"
version = "0.1.0"
authors = ["Web3Games Developers"]
edition = "2021"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "web3games-node"

[dependencies]
futures = "0.3.4"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
structopt = "0.3.8"
jsonrpc-core = "18.0.0"
jsonrpc-pubsub = "18.0.0"
hex-literal = "0.3.1"
async-trait = "0.1"
log = "0.4.8"
clap = { version = "3.0", features = ["derive"] }

sc-cli = { git = "https://github.com/paritytech/substrate", features = ["wasmtime"] }
sp-core = { git = "https://github.com/paritytech/substrate" }
sc-executor = { git = "https://github.com/paritytech/substrate", features = ["wasmtime"] }
sc-service = { git = "https://github.com/paritytech/substrate", features = ["wasmtime"] }
sc-telemetry = { git = "https://github.com/paritytech/substrate" }
sc-keystore = { git = "https://github.com/paritytech/substrate" }
sp-inherents = { git = "https://github.com/paritytech/substrate" }
sp-keyring = { git = "https://github.com/paritytech/substrate" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate" }
sp-consensus = { git = "https://github.com/paritytech/substrate" }
sc-consensus = { git = "https://github.com/paritytech/substrate" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/substrate" }
sc-network = { git = "https://github.com/paritytech/substrate" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate" }
sc-client-api = { git = "https://github.com/paritytech/substrate" }
sp-runtime = { git = "https://github.com/paritytech/substrate" }
sp-timestamp = { git = "https://github.com/paritytech/substrate" }
frame-system = { git = "https://github.com/paritytech/substrate" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate" }

# These dependencies are used for the node template's RPCs
sc-rpc = { git = "https://github.com/paritytech/substrate" }
sp-api = { git = "https://github.com/paritytech/substrate" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate" }
sp-blockchain = { git = "https://github.com/paritytech/substrate" }
sp-block-builder = { git = "https://github.com/paritytech/substrate" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate" }

pallet-contracts = { git = "https://github.com/paritytech/substrate" }
pallet-contracts-rpc = { git = "https://github.com/paritytech/substrate" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { git = "https://github.com/paritytech/substrate" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate" }

fc-consensus = { git = "https://github.com/web3gamesofficial/frontier", branch = "web3games-v0.6" }
fp-consensus = { git = "https://github.com/web3gamesofficial/frontier", branch = "web3games-v0.6" }
fc-rpc = { git = "https://github.com/web3gamesofficial/frontier", branch = "web3games-v0.6" }
fp-evm = { git = "https://github.com/web3gamesofficial/frontier", branch = "web3games-v0.6" }
fp-rpc = { git = "https://github.com/web3gamesofficial/frontier", branch = "web3games-v0.6" }
fp-storage = { git = "https://github.com/web3gamesofficial/frontier", branch = "web3games-v0.6" }
fc-rpc-core = { git = "https://github.com/web3gamesofficial/frontier", branch = "web3games-v0.6" }
fc-db = { git = "https://github.com/web3gamesofficial/frontier", branch = "web3games-v0.6" }
fc-mapping-sync = { git = "https://github.com/web3gamesofficial/frontier", branch = "web3games-v0.6" }
fp-dynamic-fee = { git = "https://github.com/web3gamesofficial/frontier", branch = "web3games-v0.6" }

pallet-evm = { git = "https://github.com/web3gamesofficial/frontier", branch = "web3games-v0.6" }
pallet-ethereum = { git = "https://github.com/web3gamesofficial/frontier", branch = "web3games-v0.6" }

web3games-runtime = { path = "../runtime/web3games", default-features = false, features = ["std"] }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate" }

[features]
default = ["aura"]
aura = ["web3games-runtime/aura"]
manual-seal = ["web3games-runtime/manual-seal"]
runtime-benchmarks = [
	"web3games-runtime/runtime-benchmarks",
]
