[package]
name = "web3games-node"
version = "0.0.1"
authors = ["Web3Games Developers"]
edition = "2021"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "web3games-node"

[dependencies]
futures = "0.3.4"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
structopt = "0.3.8"
jsonrpc-core = "18.0.0"
jsonrpc-pubsub = "18.0.0"
hex-literal = "0.3.1"
async-trait = "^0.1"
log = "0.4.17"
clap = { version = "3.0", features = ["derive"] }
jsonrpsee = { version = "0.13.0", features = ["server", "macros"] }

sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" , features = ["wasmtime"] }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23"  }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" , features = ["wasmtime"] }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" , features = ["wasmtime"] }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23"  }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23"  }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23"  }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23"  }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23"  }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23"  }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23"  }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23"  }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23"  }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23"  }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23"  }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23"  }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23"  }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23"  }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23"  }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23"  }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23"  }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23"  }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23"  }

# These dependencies are used for the node template's RPCs
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23"  }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23"  }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23"  }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23"  }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23"  }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23"  }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23"  }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23"  }

pallet-contracts = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23"  }
pallet-contracts-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23"  }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23"  }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23"  }

fc-consensus = { git = "https://github.com/web3gamesofficial/frontier", branch = "polkadot-v0.9.23" }
fp-consensus = { git = "https://github.com/web3gamesofficial/frontier", branch = "polkadot-v0.9.23" }
fc-rpc = { git = "https://github.com/web3gamesofficial/frontier", branch = "polkadot-v0.9.23" }
fp-evm = { git = "https://github.com/web3gamesofficial/frontier", branch = "polkadot-v0.9.23" }
fp-rpc = { git = "https://github.com/web3gamesofficial/frontier", branch = "polkadot-v0.9.23" }
fp-storage = { git = "https://github.com/web3gamesofficial/frontier", branch = "polkadot-v0.9.23" }
fc-rpc-core = { git = "https://github.com/web3gamesofficial/frontier", branch = "polkadot-v0.9.23" }
fc-db = { git = "https://github.com/web3gamesofficial/frontier", branch = "polkadot-v0.9.23" }
fc-mapping-sync = { git = "https://github.com/web3gamesofficial/frontier", branch = "polkadot-v0.9.23" }
fp-dynamic-fee = { git = "https://github.com/web3gamesofficial/frontier", branch = "polkadot-v0.9.23" }

pallet-evm = { git = "https://github.com/web3gamesofficial/frontier", branch = "polkadot-v0.9.23" }
pallet-ethereum = { git = "https://github.com/web3gamesofficial/frontier", branch = "polkadot-v0.9.23" }

web3games-runtime = { path = "../runtime/web3games", default-features = false, features = ["std"] }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23"  }

[features]
default = ["aura"]
aura = ["web3games-runtime/aura"]
manual-seal = ["web3games-runtime/manual-seal"]
runtime-benchmarks = [
	"web3games-runtime/runtime-benchmarks",
]
