[package]
name = "web3games-node"
version = "0.0.1"
authors = ["Web3Games Developers"]
edition = "2021"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "web3games-node"

[dependencies]
tracing-core = "=0.1.26" # TODO: Higher version will break log format, stick to this version until upstream upgrade.

futures = "0.3.21"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
structopt = "0.3.8"
hex-literal = "0.3.1"
async-trait = "0.1.56"
log = "0.4.17"
clap = { version = "3.0", features = ["derive"] }
jsonrpsee = { version = "0.14.0", features = ["server", "macros"] }

sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" , features = ["wasmtime"] }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"  }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" , features = ["wasmtime"] }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" , features = ["wasmtime"] }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"  }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"  }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"  }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"  }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"  }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"  }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"  }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"  }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"  }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"  }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"  }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"  }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"  }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"  }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"  }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"  }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"  }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"  }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"  }

# These dependencies are used for the node template's RPCs
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"  }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"  }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"  }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"  }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"  }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"  }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"  }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"  }

pallet-contracts = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"  }
pallet-contracts-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"  }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"  }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"  }

fc-consensus = { git = "https://github.com/web3gamesofficial/frontier", branch = "polkadot-v0.9.26" }
fp-consensus = { git = "https://github.com/web3gamesofficial/frontier", branch = "polkadot-v0.9.26" }
fc-rpc = { git = "https://github.com/web3gamesofficial/frontier", branch = "polkadot-v0.9.26" }
fp-evm = { git = "https://github.com/web3gamesofficial/frontier", branch = "polkadot-v0.9.26" }
fp-rpc = { git = "https://github.com/web3gamesofficial/frontier", branch = "polkadot-v0.9.26" }
fp-storage = { git = "https://github.com/web3gamesofficial/frontier", branch = "polkadot-v0.9.26" }
fc-rpc-core = { git = "https://github.com/web3gamesofficial/frontier", branch = "polkadot-v0.9.26" }
fc-db = { git = "https://github.com/web3gamesofficial/frontier", branch = "polkadot-v0.9.26" }
fc-mapping-sync = { git = "https://github.com/web3gamesofficial/frontier", branch = "polkadot-v0.9.26" }
fp-dynamic-fee = { git = "https://github.com/web3gamesofficial/frontier", branch = "polkadot-v0.9.26" }

pallet-evm = { git = "https://github.com/web3gamesofficial/frontier", branch = "polkadot-v0.9.26" }
pallet-ethereum = { git = "https://github.com/web3gamesofficial/frontier", branch = "polkadot-v0.9.26" }

# web3games
web3games-runtime = { path = "../runtime/web3games", default-features = false, features = ["std"] }
pallet-exchange-rpc = { path = "../pallets/exchange/rpc" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26"  }

[features]
default = ["aura"]
aura = ["web3games-runtime/aura"]
manual-seal = ["web3games-runtime/manual-seal"]
runtime-benchmarks = [
	"web3games-runtime/runtime-benchmarks",
]
