[package]
name = "precompiles"
version = "0.1.0"
authors = ["Web3Games Developers"]
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "max-encoded-len"] }
log = { version = "0.4.17", default-features = false }
rustc-hex = { version = "2.0.1", default-features = false }
num_enum = { version = "0.5.3", default-features = false }

frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" , default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" , default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" , default-features = false}
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" , default-features = false }
fp-evm = { default-features = false, git = "https://github.com/web3gamesofficial/frontier", branch = "polkadot-v0.9.26" }
pallet-evm = { default-features = false, git = "https://github.com/web3gamesofficial/frontier", branch = "polkadot-v0.9.26" }
pallet-evm-precompile-modexp = { default-features = false, git = "https://github.com/web3gamesofficial/frontier", branch = "polkadot-v0.9.26" }
pallet-evm-precompile-bn128 = { default-features = false, git = "https://github.com/web3gamesofficial/frontier", branch = "polkadot-v0.9.26" }
pallet-evm-precompile-simple = { default-features = false, git = "https://github.com/web3gamesofficial/frontier", branch = "polkadot-v0.9.26" }
pallet-evm-precompile-sha3fips = { default-features = false, git = "https://github.com/web3gamesofficial/frontier", branch = "polkadot-v0.9.26" }
pallet-evm-precompile-dispatch = { default-features = false, git = "https://github.com/web3gamesofficial/frontier", branch = "polkadot-v0.9.26" }

web3games-token-fungible = { path = "../pallets/token-fungible", default-features = false }
web3games-token-non-fungible = { path = "../pallets/token-non-fungible", default-features = false }
web3games-token-multi = { path = "../pallets/token-multi", default-features = false }
web3games-exchange = { path = "../pallets/exchange", default-features = false }
web3games-marketplace = { path = "../pallets/marketplace", default-features = false }
web3games-farming = { path = "../pallets/farming", default-features = false }
web3games-launchpad = { path = "../pallets/launchpad", default-features = false }
web3games-support = { path = "../pallets/support", default-features = false }
primitives = {path = "../primitives", default-features = false }
precompile-utils = { path = "./utils", default-features = false }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"log/std",
	"frame-system/std",
	"frame-support/std",
	"sp-std/std",
	"sp-core/std",
	"fp-evm/std",
	"pallet-evm/std",
	"pallet-evm-precompile-modexp/std",
	"pallet-evm-precompile-bn128/std",
	"pallet-evm-precompile-simple/std",
	"pallet-evm-precompile-sha3fips/std",
	"pallet-evm-precompile-dispatch/std",
	# "evm/std",
	"web3games-token-fungible/std",
	"web3games-token-non-fungible/std",
	"web3games-token-multi/std",
	"web3games-exchange/std",
	"web3games-marketplace/std",
	"web3games-farming/std",
	"web3games-launchpad/std",
	"web3games-support/std",
	"primitives/std",
	"precompile-utils/std",
]
