[package]
name = "web3games-primitives"
version = "0.1.0"
authors = ["Web3Games Developers"]
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false }

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "frame-system/std",
    "sp-application-crypto/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
]
