[package]
name = "web3games-primitives"
version = "0.1.0"
authors = ["Web3Games Developers"]
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.124", optional = true }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"serde",
	"frame-system/std",
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]
