[package]
name = "sgc-runtime"
version = "0.0.1"
authors = ["Anonymous"]
edition = "2018"
license = "Unlicense"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }

frame-executive = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
frame-support = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
frame-system = { version = "3.0.0", default-features = false, package = "frame-system", git = "https://github.com/paritytech/substrate.git", branch = "master" }
frame-system-rpc-runtime-api = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }

pallet-aura = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-balances = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-grandpa = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-randomness-collective-flip = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-sudo = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-timestamp = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-transaction-payment = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-transaction-payment-rpc-runtime-api = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }

sp-api = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-block-builder = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master"}
sp-consensus-aura = { version = "0.9.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-core = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-inherents = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master"}
sp-io = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-offchain = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-runtime = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-session = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-std = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-transaction-pool = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-version = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }

pallet-scheduler = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }

# Contract
pallet-contracts-primitives = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git",  branch = "master" }
pallet-contracts = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git",  branch = "master" }
pallet-contracts-rpc-runtime-api = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git",  branch = "master" }

# EVM
pallet-ethereum = { version = "0.1.0", default-features = false, git = "https://github.com/Web3-Substrate-Game-World/frontier", branch = "sgc_v0.1" }
pallet-evm = { version = "3.0.0", default-features = false, git = "https://github.com/Web3-Substrate-Game-World/frontier", branch = "sgc_v0.1" }
pallet-evm-precompile-simple = { version = "3.0.0", default-features = false, git = "https://github.com/Web3-Substrate-Game-World/frontier", branch = "sgc_v0.1" }

fp-rpc = { default-features = false, git = "https://github.com/Web3-Substrate-Game-World/frontier", branch = "sgc_v0.1" }

# Used for runtime benchmarking
# frame-benchmarking = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "49a4103", optional = true }
# frame-system-benchmarking = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "49a4103", optional = true }
# hex-literal = { version = "0.3.1", optional = true }

primitives = { package = "sgc-primitives", path = "../primitives", default-features = false }
precompile = { package = "pallet-evm-precompile", default-features = false, path = "../pallets/evm-precompile" }
chain-extension = { package = "pallet-chain-extension", default-features = false, path = "../pallets/chain-extension" }

#local pallet
pallet-template = { default-features = false, path = "../pallets/template" }
pallet-erc1155 = { default-features = false, path = "../pallets/erc1155" }

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

[features]
default = ["std"]
std = [
	"codec/std",
	"serde",

	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"fp-rpc/std",

	"pallet-contracts/std",
	"pallet-contracts-primitives/std",
	"pallet-contracts-rpc-runtime-api/std",
	"pallet-ethereum/std",
	"pallet-evm/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",

	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",

	"precompile/std",
	"chain-extension/std",

	"pallet-template/std",
	"pallet-erc1155/std",
]
# runtime-benchmarks = [
# 	"sp-runtime/runtime-benchmarks",
# 	"frame-benchmarking",
# 	"frame-support/runtime-benchmarks",
# 	"frame-system-benchmarking",
# 	"hex-literal",
# 	"frame-system/runtime-benchmarks",
# 	"pallet-balances/runtime-benchmarks",
# 	"pallet-timestamp/runtime-benchmarks",
# 	"pallet-contracts/runtime-benchmarks",
# ]
